--- a/.github/workflows/aks-terraform.yaml
+++ b/.github/workflows/aks-terraform.yaml
@@ -6,7 +6,7 @@ on:
       environment:
         description: 'Choose the environment (e.g., dev, prod)'
         required: false
-        default: 'dev'  # We default to 'dev' if no input is provided
+        default: 'dev'  # Default to 'dev' if no input is provided
 
 #  push:
 #    branches:
