--- a/.github/workflows/docker-helm.yaml
+++ b/.github/workflows/docker-helm.yaml
@@ -52,7 +52,7 @@ jobs:
       # Step 7: Build and push Docker images
       # Before deployment, we build the Docker images and push them to Docker Hub with multi-platform support
 
-      # First, we set up Docker Buildx
+      # First, we set up Docker Buildx to enable building images for multiple architectures 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
