--- a/.github/workflows/aks-terraform.yaml
+++ b/.github/workflows/aks-terraform.yaml
@@ -17,29 +17,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
-      # This step checks out the repository to access the Terraform configuration files and any other resources.
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Azure CLI
-      # This step sets up Azure CLI to interact with Azure resources like AKS.
-      - name: Set up Azure CLI
-        uses: azure/setup-azurecli@v2
-
-      # Step 3: Log in to Azure
-      # This step logs into Azure using service principal credentials stored as GitHub Secrets. These credentials allow us to interact with Azure resources.
       - name: Log in to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}  # The service principal credentials from GitHub secrets
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Step 4: Set up Terraform
-      # This step installs the specified version of Terraform on the runner, which will be used to execute the infrastructure deployment.
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
+      - name: Set up Azure CLI
+        uses: azure/cli@v2
         with:
-          terraform_version: 1.0.5  # Specify the version of Terraform to use
+          azcliversion: latest
+
+      # The default version installs the latest version of Terraform CLI.
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1 
 
       # Step 5: Terraform fmt (Format all Terraform files)
       # This step ensures that all Terraform configuration files are formatted correctly, making them more readable and consistent.
