--- a/.github/workflows/aks-terraform.yaml
+++ b/.github/workflows/aks-terraform.yaml
@@ -1,60 +1,47 @@
-name: Deploy AKS using Terraform
+name: Terraform CI/CD
 
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Choose the environment (e.g., dev, prod)'
-        required: false
-        default: 'dev'  # Default to 'dev' if no input is provided
-
-#  push:
-#    branches:
-#      - main 
+        description: 'Select environment (e.g. dev, prod)'
+        required: true
+        default: 'dev'
 
 jobs:
-  deploy_aks:
+  terraform:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Log in to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Set up Azure CLI
-        uses: azure/cli@v2
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az --version
-
-      # The default version installs the latest version of Terraform CLI.
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Check Terraform version
-        run: terraform --version
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
+        working-directory: ./terraform/environments/${{ github.event.inputs.environment }}
 
-      - name: Terraform fmt (Format all Terraform files)
-        run: |
-          terraform fmt -recursive ./terraform/environments/${{ github.event.inputs.environment }}
+      - name: Terraform Init
+        id: init
+        run: terraform init -input=false
+        working-directory: ./terraform/environments/${{ github.event.inputs.environment }}
 
-      - name: Initialize Terraform
-        run: |
-          terraform init -chdir=./terraform/environments/${{ github.event.inputs.environment }}
-
-      - name: Validate Terraform
-        run: |
-          terraform validate -chdir=./terraform/environments/${{ github.event.inputs.environment }}
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+        working-directory: ./terraform/environments/${{ github.event.inputs.environment }}
 
       - name: Terraform Plan
-        run: |
-          terraform plan -chdir=./terraform/environments/${{ github.event.inputs.environment }} -out=tfplan
+        id: plan
+        run: terraform plan -no-color -input=false
+        continue-on-error: true
+        working-directory: ./terraform/environments/${{ github.event.inputs.environment }}
 
       - name: Terraform Apply
-        run: |
-          terraform apply -chdir=./terraform/environments/${{ github.event.inputs.environment }} -auto-approve tfplan
+        id: apply
+        run: terraform apply -auto-approve tfplan
+        working-directory: ./terraform/environments/${{ github.event.inputs.environment }}
