--- a/.github/workflows/aks-terraform.yaml
+++ b/.github/workflows/aks-terraform.yaml
@@ -1,23 +1,43 @@
-name: Terraform CI/CD
+name: Deploy AKS using Terraform
 
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Select environment (e.g. dev, prod)'
-        required: true
-        default: 'dev'
+        description: 'Choose the environment (e.g., dev, prod)'
+        required: false
+        default: 'dev'  # Default to 'dev' if no input is provided
+
+#  push:
+#    branches:
+#      - main 
 
 jobs:
-  terraform:
+  deploy_aks:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Set up Azure CLI
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az --version
+
+      # The default version installs the latest version of Terraform CLI.
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
+
+      - name: Check Terraform version
+        run: terraform --version
 
       - name: Terraform fmt
         id: fmt
