--- a/.github/workflows/docker-helm.yaml
+++ b/.github/workflows/docker-helm.yaml
@@ -36,13 +36,13 @@ jobs:
         uses: azure/setup-kubectl@v4
         with:
           version: 'latest'
-        id: install
+        id: setup-kubectl
 
       - name: Set up Helm
         uses: azure/setup-helm@v4
         with:
           version: 'latest'
-        id: install
+        id: setup-helm
 
       - name: Get AKS credentials
         run: |
