--- a/.github/workflows/docker-helm.yaml
+++ b/.github/workflows/docker-helm.yaml
@@ -26,7 +26,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       
       - name: Set up Azure CLI
-        uses: azure/setup-azurecli@v1
+        uses: azure/cli@v2
         with:
           azcliversion: latest
           inlineScript: |
