--- a/.github/workflows/docker-helm.yaml
+++ b/.github/workflows/docker-helm.yaml
@@ -63,7 +63,8 @@ jobs:
           context: .  
           platforms: linux/amd64,linux/arm64  
           file: ${{ env.WEBAPP_DOCKERFILE }}
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.WEBAPP_IMAGE }}
+          # tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.WEBAPP_IMAGE }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/webapp:1.0
           push: true
           
       - name: Build and Push MySQL Docker Image
@@ -72,7 +73,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           file: ${{ env.MYSQL_DOCKERFILE }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.MYSQL_IMAGE }}
+          # tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.MYSQL_IMAGE }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mysql-custom:1.0
           push: true
 
       - name: Deploy with Helm
