--- a/app/src/apache.conf
+++ b/app/src/apache.conf
@@ -21,7 +21,7 @@
         RedirectMatch ^/$ /welcome/
 	</Directory>
         
-        # Alias para que /welcome
+        # Alias for /welcome
         Alias /welcome /var/www/html/pages/welcome
         <Directory /var/www/html/pages/welcome>
                 Options Indexes FollowSymLinks
@@ -29,7 +29,7 @@
                 Require all granted
         </Directory>
 
-	# Alias para que /home
+	# Alias for /home
         Alias /home /var/www/html/pages/home
         <Directory /var/www/html/pages/home>
                 Options Indexes FollowSymLinks
@@ -37,7 +37,7 @@
                 Require all granted
         </Directory>
 
-	# Alias para devops
+	# Alias for devops
 	Alias /devops /var/www/html/pages/devops
 	<Directory /var/www/html/pages/devops>
 		Options Indexes FollowSymLinks
@@ -45,7 +45,7 @@
 		Require all granted
 	</Directory>
 
-        # Alias para cybersecurity
+        # Alias for cybersecurity
         Alias /cybersecurity /var/www/html/pages/cybersecurity
         <Directory /var/www/html/pages/cybersecurity>
                 Options Indexes FollowSymLinks
@@ -53,7 +53,7 @@
                 Require all granted
         </Directory>
 
-        # Alias para filmzone
+        # Alias for filmzone
         Alias /filmzone /var/www/html/pages/filmzone
         <Directory /var/www/html/pages/filmzone>
                 Options Indexes FollowSymLinks
@@ -61,7 +61,7 @@
                 Require all granted
         </Directory>
 
-        # Alias para blog
+        # Alias for blog
         Alias /blog /var/www/html/pages/blog
         <Directory /var/www/html/pages/blog>
                 Options Indexes FollowSymLinks
@@ -69,7 +69,7 @@
                 Require all granted
         </Directory>
 
-        # Alias para estilos
+        # Alias for styles
         Alias /styles /var/www/html/styles
         <Directory /var/www/html/styles>
                 Options Indexes FollowSymLinks
@@ -77,7 +77,7 @@
                 Require all granted
         </Directory>
 
-        # Alias para assets
+        # Alias for assets
         Alias /utils /var/www/html/utils
         <Directory /var/www/html/utils>
                 Options Indexes FollowSymLinks
@@ -85,7 +85,7 @@
                 Require all granted
         </Directory>
 
-        # Alias para service
+        # Alias for services
         Alias /service /var/www/html/service
         <Directory /var/www/html/service>
                 Options Indexes FollowSymLinks
@@ -93,7 +93,7 @@
                 Require all granted
         </Directory>
 
-        # Alias para users
+        # Alias for users
         Alias /users /var/www/html/pages/home/users/
         <Directory /var/www/html/pages/home/users>
                 Options Indexes FollowSymLinks
