--- a/app/src/Dockerfile
+++ b/app/src/Dockerfile
@@ -1,19 +1,21 @@
-# Usa una imagen base de PHP con Apache
+# Use a base PHP image with Apache
 FROM php:8.2-apache
 
-# Instala extensiones necesarias para MySQL
+# Install necessary extensions for MySQL
 RUN docker-php-ext-install mysqli
 
-# Copia los archivos de tu aplicación al directorio raíz de Apache
+# Copy your application files to Apache's root directory
 COPY . /var/www/html/
 
-# Asegúrate de que Apache pueda acceder a los archivos
+# Ensure Apache can access the files
 RUN chown -R www-data:www-data /var/www/html
 
-# Configuración personalizada para ubicar el DocumentRoot a welcome
+# Custom configuration to set the DocumentRoot to 'welcome'
 COPY apache.conf /etc/apache2/sites-available/000-default.conf
 
+# Enable mod_rewrite for URL rewriting
 RUN a2enmod rewrite
 
-# Exponemos el puerto 80 para servir la aplicación
+# Expose port 80 to serve the application
 EXPOSE 80
+
